// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots: language × body type > axios · binary 1`] = `
"import axios from "axios";
import { readFileSync } from "node:fs";

const response = await axios({
  method: "post",
  url: "https://api.example.com/users?page=2",
  headers: {
    "X-Trace": "abc",
    "Content-Type": "application/octet-stream",
  },
  data: readFileSync("/tmp/data.bin"),
});

console.log(response.status, response.data);
"
`;

exports[`snapshots: language × body type > axios · json 1`] = `
"import axios from "axios";

const response = await axios({
  method: "post",
  url: "https://api.example.com/users?page=2",
  headers: {
    "X-Trace": "abc",
    "Content-Type": "application/json",
  },
  data: "{\\"name\\":\\"Ada\\",\\"tags\\":[\\"a\\",\\"b\\"]}",
});

console.log(response.status, response.data);
"
`;

exports[`snapshots: language × body type > axios · multipart 1`] = `
"import axios from "axios";

const form = new FormData();
form.append("title", "Hello");
// TODO: attach the file at "/tmp/me.png" as "avatar" (fs.openAsBlob in Node, an <input type="file"> in the browser).

const response = await axios({
  method: "post",
  url: "https://api.example.com/users?page=2",
  headers: {
    "X-Trace": "abc",
  },
  data: form,
});

console.log(response.status, response.data);
"
`;

exports[`snapshots: language × body type > axios · none 1`] = `
"import axios from "axios";

const response = await axios({
  method: "get",
  url: "https://api.example.com/users?page=2",
  headers: {
    "X-Trace": "abc",
  },
});

console.log(response.status, response.data);
"
`;

exports[`snapshots: language × body type > axios · raw 1`] = `
"import axios from "axios";

const response = await axios({
  method: "post",
  url: "https://api.example.com/users?page=2",
  headers: {
    "X-Trace": "abc",
    "Content-Type": "text/plain",
  },
  data: "plain 'text' with $dollar",
});

console.log(response.status, response.data);
"
`;

exports[`snapshots: language × body type > axios · urlencoded 1`] = `
"import axios from "axios";

const response = await axios({
  method: "post",
  url: "https://api.example.com/users?page=2",
  headers: {
    "X-Trace": "abc",
  },
  data: new URLSearchParams([["a", "1 2"], ["b", "x&y"]]),
});

console.log(response.status, response.data);
"
`;

exports[`snapshots: language × body type > curl · binary 1`] = `
"curl --location --request POST 'https://api.example.com/users?page=2' \\
  --header 'X-Trace: abc' \\
  --header 'Content-Type: application/octet-stream' \\
  --data-binary '@/tmp/data.bin'"
`;

exports[`snapshots: language × body type > curl · json 1`] = `
"curl --location --request POST 'https://api.example.com/users?page=2' \\
  --header 'X-Trace: abc' \\
  --header 'Content-Type: application/json' \\
  --data-raw '{"name":"Ada","tags":["a","b"]}'"
`;

exports[`snapshots: language × body type > curl · multipart 1`] = `
"curl --location --request POST 'https://api.example.com/users?page=2' \\
  --header 'X-Trace: abc' \\
  --form-string 'title=Hello' \\
  --form 'avatar=@/tmp/me.png'"
`;

exports[`snapshots: language × body type > curl · none 1`] = `
"curl --location 'https://api.example.com/users?page=2' \\
  --header 'X-Trace: abc'"
`;

exports[`snapshots: language × body type > curl · raw 1`] = `
"curl --location --request POST 'https://api.example.com/users?page=2' \\
  --header 'X-Trace: abc' \\
  --header 'Content-Type: text/plain' \\
  --data-raw 'plain '\\''text'\\'' with $dollar'"
`;

exports[`snapshots: language × body type > curl · urlencoded 1`] = `
"curl --location --request POST 'https://api.example.com/users?page=2' \\
  --header 'X-Trace: abc' \\
  --header 'Content-Type: application/x-www-form-urlencoded' \\
  --data-raw 'a=1+2&b=x%26y'"
`;

exports[`snapshots: language × body type > fetch · binary 1`] = `
"import { readFileSync } from "node:fs";

const response = await fetch("https://api.example.com/users?page=2", {
  method: "POST",
  headers: {
    "X-Trace": "abc",
    "Content-Type": "application/octet-stream",
  },
  body: readFileSync("/tmp/data.bin"),
});

console.log(response.status, await response.text());
"
`;

exports[`snapshots: language × body type > fetch · json 1`] = `
"const response = await fetch("https://api.example.com/users?page=2", {
  method: "POST",
  headers: {
    "X-Trace": "abc",
    "Content-Type": "application/json",
  },
  body: "{\\"name\\":\\"Ada\\",\\"tags\\":[\\"a\\",\\"b\\"]}",
});

console.log(response.status, await response.text());
"
`;

exports[`snapshots: language × body type > fetch · multipart 1`] = `
"const form = new FormData();
form.append("title", "Hello");
// TODO: attach the file at "/tmp/me.png" as "avatar" (fs.openAsBlob in Node, an <input type="file"> in the browser).

const response = await fetch("https://api.example.com/users?page=2", {
  method: "POST",
  headers: {
    "X-Trace": "abc",
  },
  body: form,
});

console.log(response.status, await response.text());
"
`;

exports[`snapshots: language × body type > fetch · none 1`] = `
"const response = await fetch("https://api.example.com/users?page=2", {
  method: "GET",
  headers: {
    "X-Trace": "abc",
  },
});

console.log(response.status, await response.text());
"
`;

exports[`snapshots: language × body type > fetch · raw 1`] = `
"const response = await fetch("https://api.example.com/users?page=2", {
  method: "POST",
  headers: {
    "X-Trace": "abc",
    "Content-Type": "text/plain",
  },
  body: "plain 'text' with $dollar",
});

console.log(response.status, await response.text());
"
`;

exports[`snapshots: language × body type > fetch · urlencoded 1`] = `
"const response = await fetch("https://api.example.com/users?page=2", {
  method: "POST",
  headers: {
    "X-Trace": "abc",
  },
  body: new URLSearchParams([["a", "1 2"], ["b", "x&y"]]),
});

console.log(response.status, await response.text());
"
`;

exports[`snapshots: language × body type > go · binary 1`] = `
"package main

import (
	"fmt"
	"io"
	"net/http"
	"os"
)

func main() {
	file, err := os.Open("/tmp/data.bin")
	if err != nil {
		panic(err)
	}
	defer file.Close()
	req, err := http.NewRequest("POST", "https://api.example.com/users?page=2", file)
	if err != nil {
		panic(err)
	}
	req.Header.Add("X-Trace", "abc")
	req.Header.Add("Content-Type", "application/octet-stream")

	resp, err := http.DefaultClient.Do(req)
	if err != nil {
		panic(err)
	}
	defer resp.Body.Close()

	data, _ := io.ReadAll(resp.Body)
	fmt.Println(resp.Status, string(data))
}
"
`;

exports[`snapshots: language × body type > go · json 1`] = `
"package main

import (
	"fmt"
	"io"
	"net/http"
	"strings"
)

func main() {
	body := strings.NewReader("{\\"name\\":\\"Ada\\",\\"tags\\":[\\"a\\",\\"b\\"]}")
	req, err := http.NewRequest("POST", "https://api.example.com/users?page=2", body)
	if err != nil {
		panic(err)
	}
	req.Header.Add("X-Trace", "abc")
	req.Header.Add("Content-Type", "application/json")

	resp, err := http.DefaultClient.Do(req)
	if err != nil {
		panic(err)
	}
	defer resp.Body.Close()

	data, _ := io.ReadAll(resp.Body)
	fmt.Println(resp.Status, string(data))
}
"
`;

exports[`snapshots: language × body type > go · multipart 1`] = `
"package main

import (
	"bytes"
	"fmt"
	"io"
	"mime/multipart"
	"net/http"
	"os"
)

func main() {
	var payload bytes.Buffer
	writer := multipart.NewWriter(&payload)
	writer.WriteField("title", "Hello")
	if file, err := os.Open("/tmp/me.png"); err == nil {
		part, _ := writer.CreateFormFile("avatar", "/tmp/me.png")
		io.Copy(part, file)
		file.Close()
	} else {
		panic(err)
	}
	writer.Close()
	req, err := http.NewRequest("POST", "https://api.example.com/users?page=2", &payload)
	if err != nil {
		panic(err)
	}
	req.Header.Add("X-Trace", "abc")
	req.Header.Set("Content-Type", writer.FormDataContentType())

	resp, err := http.DefaultClient.Do(req)
	if err != nil {
		panic(err)
	}
	defer resp.Body.Close()

	data, _ := io.ReadAll(resp.Body)
	fmt.Println(resp.Status, string(data))
}
"
`;

exports[`snapshots: language × body type > go · none 1`] = `
"package main

import (
	"fmt"
	"io"
	"net/http"
)

func main() {
	req, err := http.NewRequest("GET", "https://api.example.com/users?page=2", nil)
	if err != nil {
		panic(err)
	}
	req.Header.Add("X-Trace", "abc")

	resp, err := http.DefaultClient.Do(req)
	if err != nil {
		panic(err)
	}
	defer resp.Body.Close()

	data, _ := io.ReadAll(resp.Body)
	fmt.Println(resp.Status, string(data))
}
"
`;

exports[`snapshots: language × body type > go · raw 1`] = `
"package main

import (
	"fmt"
	"io"
	"net/http"
	"strings"
)

func main() {
	body := strings.NewReader("plain 'text' with $dollar")
	req, err := http.NewRequest("POST", "https://api.example.com/users?page=2", body)
	if err != nil {
		panic(err)
	}
	req.Header.Add("X-Trace", "abc")
	req.Header.Add("Content-Type", "text/plain")

	resp, err := http.DefaultClient.Do(req)
	if err != nil {
		panic(err)
	}
	defer resp.Body.Close()

	data, _ := io.ReadAll(resp.Body)
	fmt.Println(resp.Status, string(data))
}
"
`;

exports[`snapshots: language × body type > go · urlencoded 1`] = `
"package main

import (
	"fmt"
	"io"
	"net/http"
	"net/url"
	"strings"
)

func main() {
	form := url.Values{}
	form.Add("a", "1 2")
	form.Add("b", "x&y")
	req, err := http.NewRequest("POST", "https://api.example.com/users?page=2", strings.NewReader(form.Encode()))
	if err != nil {
		panic(err)
	}
	req.Header.Add("X-Trace", "abc")
	req.Header.Set("Content-Type", "application/x-www-form-urlencoded")

	resp, err := http.DefaultClient.Do(req)
	if err != nil {
		panic(err)
	}
	defer resp.Body.Close()

	data, _ := io.ReadAll(resp.Body)
	fmt.Println(resp.Status, string(data))
}
"
`;

exports[`snapshots: language × body type > httpie · binary 1`] = `
"http \\
  --follow \\
  POST \\
  'https://api.example.com/users?page=2' \\
  'X-Trace:abc' \\
  'Content-Type:application/octet-stream' \\
  < '/tmp/data.bin'
"
`;

exports[`snapshots: language × body type > httpie · json 1`] = `
"http \\
  --follow \\
  --raw \\
  '{"name":"Ada","tags":["a","b"]}' \\
  POST \\
  'https://api.example.com/users?page=2' \\
  'X-Trace:abc' \\
  'Content-Type:application/json'
"
`;

exports[`snapshots: language × body type > httpie · multipart 1`] = `
"http \\
  --follow \\
  --multipart \\
  POST \\
  'https://api.example.com/users?page=2' \\
  'X-Trace:abc' \\
  'title=Hello' \\
  'avatar@/tmp/me.png'
"
`;

exports[`snapshots: language × body type > httpie · none 1`] = `
"http \\
  --follow \\
  GET \\
  'https://api.example.com/users?page=2' \\
  'X-Trace:abc'
"
`;

exports[`snapshots: language × body type > httpie · raw 1`] = `
"http \\
  --follow \\
  --raw \\
  'plain '\\''text'\\'' with $dollar' \\
  POST \\
  'https://api.example.com/users?page=2' \\
  'X-Trace:abc' \\
  'Content-Type:text/plain'
"
`;

exports[`snapshots: language × body type > httpie · urlencoded 1`] = `
"http \\
  --follow \\
  --form \\
  POST \\
  'https://api.example.com/users?page=2' \\
  'X-Trace:abc' \\
  'a=1 2' \\
  'b=x&y'
"
`;

exports[`snapshots: language × body type > python · binary 1`] = `
"import requests

response = requests.request(
    "POST",
    "https://api.example.com/users?page=2",
    headers={
        "X-Trace": "abc",
        "Content-Type": "application/octet-stream",
    },
    data=open("/tmp/data.bin", "rb"),
)

print(response.status_code, response.text)
"
`;

exports[`snapshots: language × body type > python · json 1`] = `
"import requests

response = requests.request(
    "POST",
    "https://api.example.com/users?page=2",
    headers={
        "X-Trace": "abc",
        "Content-Type": "application/json",
    },
    data="{\\"name\\":\\"Ada\\",\\"tags\\":[\\"a\\",\\"b\\"]}".encode("utf-8"),
)

print(response.status_code, response.text)
"
`;

exports[`snapshots: language × body type > python · multipart 1`] = `
"import requests

response = requests.request(
    "POST",
    "https://api.example.com/users?page=2",
    headers={
        "X-Trace": "abc",
    },
    files=[
        ("title", (None, "Hello")),
        ("avatar", open("/tmp/me.png", "rb")),
    ],
)

print(response.status_code, response.text)
"
`;

exports[`snapshots: language × body type > python · none 1`] = `
"import requests

response = requests.request(
    "GET",
    "https://api.example.com/users?page=2",
    headers={
        "X-Trace": "abc",
    },
)

print(response.status_code, response.text)
"
`;

exports[`snapshots: language × body type > python · raw 1`] = `
"import requests

response = requests.request(
    "POST",
    "https://api.example.com/users?page=2",
    headers={
        "X-Trace": "abc",
        "Content-Type": "text/plain",
    },
    data="plain 'text' with $dollar".encode("utf-8"),
)

print(response.status_code, response.text)
"
`;

exports[`snapshots: language × body type > python · urlencoded 1`] = `
"import requests

response = requests.request(
    "POST",
    "https://api.example.com/users?page=2",
    headers={
        "X-Trace": "abc",
    },
    data=[
        ("a", "1 2"),
        ("b", "x&y"),
    ],
)

print(response.status_code, response.text)
"
`;
